--- a/css/common.css
+++ b/css/common.css
@@ -35,6 +35,10 @@ input::-webkit-inner-spin-button{
     right: 25px;
 }
 
+.custom-btn{
+    background-color: red !important;
+}
+
 /* #dashboard-menu{
     position: fixed;
     height: 100%;
