--- a/css/common.css
+++ b/css/common.css
@@ -38,6 +38,11 @@ input::-webkit-inner-spin-button{
 .custom-btn{
     background-color: red !important;
 }
+.h-line{
+    width: 150px;
+    margin: 0 auto;
+    height: 1.7px;
+}
 
 /* #dashboard-menu{
     position: fixed;
