--- a/css/buttons.css
+++ b/css/buttons.css
@@ -7,7 +7,7 @@
 .custom-btn{
     background-color:#5EB0D3 !important;
     border-color:#5EB0D3 !important;
-
+    /* color: ghostwhite !important; */
 }
 
 
