--- a/css/common1.css
+++ b/css/common1.css
@@ -6,11 +6,11 @@
     font-family: 'Montserrat', sans-serif;
 }
 
-input::-webkit-outer-spin-button,
+/* input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button{
     -webkit-appearance: none;
     margin: 0; 
-}
+} */
 
 /* input[type=number]{
     -moz-appearance: textfield;
@@ -43,8 +43,6 @@ input::-webkit-inner-spin-button{
     margin: 0 auto;
     height: 1.7px;
 }
-
-
 
 /* #dashboard-menu{
     position: fixed;
