users backend finished

--- a/css/common1.css
+++ b/css/common1.css
@@ -17,12 +17,12 @@ input::-webkit-inner-spin-button{
 } */
 
 .custom-bg{
-    background-color: #7ba9a9;
+    background-color: ghostwhite;
 }
 
-.custom-bg:hover{
+/* .custom-bg:hover{
     background-color: #BCD9D7;
-}
+} */
 .custom-alert{
     position: fixed;
     top: 80px;
